<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <!--    <ImageView-->
    <!--        android:id="@+id/logo"-->
    <!--        android:layout_width="86dp"-->
    <!--        android:layout_height="79dp"-->
    <!--        app:srcCompat="@drawable/blue_logo"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        android:layout_marginTop="15dp"-->
    <!--        android:layout_marginLeft="20dp"/>-->

    <!--    <TextView-->
    <!--        android:id="@+id/appName"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginLeft="10dp"-->
    <!--        android:layout_marginTop="25dp"-->
    <!--        android:fontFamily="sans-serif-medium"-->
    <!--        android:text="@string/app_name"-->
    <!--        android:textAppearance="@style/TextAppearance.AppCompat.Display1"-->
    <!--        android:textColor="@color/DarkBlue"-->
    <!--        android:textSize="40sp"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/logo"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="86dp"
                android:layout_height="79dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/blue_logo" />

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/DarkBlue"
                android:textSize="40sp"
                app:layout_constraintStart_toEndOf="@+id/logo"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/round_button"
                app:layout_constraintTop_toBottomOf="@+id/logo" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="38dp"
                android:layout_marginEnd="20dp"
                android:src="@android:drawable/ic_menu_search"
                app:layout_constraintEnd_toEndOf="@+id/search_bar"
                app:layout_constraintTop_toTopOf="@+id/search_bar"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/suggest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/suggestion"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/Black"
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/search_bar"
                app:layout_constraintTop_toBottomOf="@+id/search_bar" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/suggest"
            app:layout_constraintTop_toBottomOf="@+id/suggest"
            tools:layout_editor_absoluteX="-6dp"
            tools:layout_editor_absoluteY="214dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/cricket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/round_button"
                    android:backgroundTint="@color/teal_700"
                    android:text="Cricket"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/football"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/round_button"
                    android:backgroundTint="@color/teal_700"
                    android:text="@string/football"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/basketBall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/round_button"
                    android:backgroundTint="@color/teal_700"
                    android:text="@string/basketBall"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/badminton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/round_button"
                    android:backgroundTint="@color/teal_700"
                    android:text="@string/badminton"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/golf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/round_button"
                    android:backgroundTint="@color/teal_700"
                    android:text="@string/golf"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/vollyBall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/round_button"
                    android:backgroundTint="@color/teal_700"
                    android:text="@string/vollyBall"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/chess"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/round_button"
                    android:backgroundTint="@color/teal_700"
                    android:text="@string/chess"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/polo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/round_button"
                    android:backgroundTint="@color/teal_700"
                    android:text="@string/polo"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/carrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/round_button"
                    android:backgroundTint="@color/teal_700"
                    android:text="@string/carrom"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/ludo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/round_button"
                    android:backgroundTint="@color/teal_700"
                    android:text="@string/ludo"
                    android:textSize="20sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>