<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="15dp"
    tools:context=".PaymentActivity">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="86dp"
        android:layout_height="79dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blue_logo" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/DarkBlue"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/paymentShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/Blue"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/bag"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <ImageView
        android:id="@+id/bag"
        android:layout_width="69dp"
        android:layout_height="59dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:srcCompat="@drawable/shopping_bag" />
    <TextView
        android:id="@+id/adressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Adress"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/bag"
        app:layout_constraintTop_toBottomOf="@+id/bag" />
    <EditText
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/LightBlue"
        android:hint="@string/addressText"
        android:inputType="textPostalAddress"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adressText" />
    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EmailText"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/bag"
        app:layout_constraintTop_toBottomOf="@+id/address" />
    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/LightBlue"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailText" />

    <Button
        android:id="@+id/orderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"/>
    <Button
        android:id="@+id/backButotn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>