<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cricket">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="86dp"
                android:layout_height="79dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/blue_logo" />

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/DarkBlue"
                android:textSize="40sp"
                app:layout_constraintStart_toEndOf="@+id/logo"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/round_button"
                app:layout_constraintTop_toBottomOf="@+id/logo" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="38dp"
                android:layout_marginEnd="20dp"
                android:src="@android:drawable/ic_menu_search"
                app:layout_constraintEnd_toEndOf="@+id/search_bar"
                app:layout_constraintTop_toTopOf="@+id/search_bar"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/amount"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/Black"
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/search_bar"
                app:layout_constraintTop_toBottomOf="@+id/search_bar" />
            <Button
                android:id="@+id/minusButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="-"
                app:layout_constraintStart_toStartOf="@id/amount"
                app:layout_constraintTop_toBottomOf="@id/amount"
                tools:layout_editor_absoluteX="95dp" />


            <EditText
                android:id="@+id/quantity"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginRight="10dp"
                android:autofillHints=""
                android:layout_marginStart="10dp"
                android:background="@color/LightBlue"
                android:hint="1"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/minusButton"
                app:layout_constraintTop_toBottomOf="@id/amount" />

            <Button
                android:id="@+id/plusButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="+"
                app:layout_constraintStart_toEndOf="@id/quantity"
                app:layout_constraintTop_toBottomOf="@id/amount"

                />
            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:textColor="@color/Blue"
                android:textSize="20sp"
               app:layout_constraintStart_toEndOf="@+id/plusButton"
                app:layout_constraintTop_toBottomOf="@+id/amount"/>

            <Button
                android:id="@+id/bill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/bill"
                app:layout_constraintTop_toBottomOf="@+id/checkBox"
                app:layout_constraintStart_toStartOf="@+id/minusButton"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Your Amount"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toEndOf="@+id/bill"
                app:layout_constraintTop_toTopOf="@+id/bill"></TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@+id/suggest"
            app:layout_constraintTop_toBottomOf="@+id/suggest"
            android:layout_marginStart="30dp"
            tools:layout_editor_absoluteY="214dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="163dp"
                    android:layout_height="131dp"
                    app:srcCompat="@drawable/ball"
                    tools:layout_editor_absoluteX="44dp"
                    tools:layout_editor_absoluteY="274dp" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="145dp"
                    android:layout_height="121dp"
                    app:srcCompat="@drawable/bat"
                    tools:layout_editor_absoluteX="250dp"
                    tools:layout_editor_absoluteY="274dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="159dp"
                    android:layout_height="146dp"
                    app:srcCompat="@drawable/gloves"
                    tools:layout_editor_absoluteX="48dp"
                    tools:layout_editor_absoluteY="442dp" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="161dp"
                    android:layout_height="150dp"
                    app:srcCompat="@drawable/helmet"
                    tools:layout_editor_absoluteX="234dp"
                    tools:layout_editor_absoluteY="438dp" />
            </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>